[package]
name = "rdlock"
version = "0.1.0"
edition = "2021"
description = "A library for distributed redis locks written in rust"
license = "MIT"
authors = ["Tudor Gheorghiu <tudor.reda@gmail.com>"]
repository = "https://github.com/RedaOps/rdlock"

[dependencies]
tokio = { version = "1.35.1", features = ["sync", "macros", "rt-multi-thread"] }
redis = { version = "0.27.5", features = ["aio", "connection-manager", "tokio-comp"] }
tokio-stream = "0.1.16"
